2805 [Update]               added a first startup question if the updater should be enabled or disabled (message will be shown also once to existing users)
                            if disabled no downloads will be made without confirmation. therefore e.g. no information of new updates will be available.
2804 [OneClick] + [FileIndexer] show playlist selection window for DVD/Blu-ray structures also if only one playlist is found
2803 [HD Streams Extractor] added support for "E-AC3 Surround"
2802 [OneClick]             enhanced suitable container type detection
2801 [OneClick]             fixed video name not written sometimes (regression of 2791). bug #901
2800 [L-SMASH Indexer]      improved detection of LSMASH/LWLibav (regression of 2767). bug #899
2799 [OneClick]             fixed PCM handling. bug #900
2798 [OneClick]             fixed MPLS handling (regression of 2790)
2797 [Language]             added "reserved for local use"/qaa language support
2796 [Chapter]              added UHD Blu-ray support
2795 [MessageBoxEx]         cosmetics
2794 [MessageBoxEx]         removed external dependency to MessageBoxExLib.dll
2793 [AVS Script Creator]   added information about DirectShowSource/AVISource when opening a file
2792 [File Indexer]         removed the container warning when using the FFMS indexer
2791 [OneClick]             added video track name. feature request #537
                            removed the possibility to delete tracks with DEL/BACKSPACE
2790 [File Indexer]         fixed MPLS handling (regression of 2787)
2789 [Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
2788 [x264]                 adjusted --b-adapt default value for "--preset slow"
2787 [AVS Script Creator]   added mpls as supported input type
     [File Indexer]         added mpls as supported input type
     [File Indexer]         do not reset the output path when selecting a different indexer if the path has already been set