@@ -1,3 +1,4 @@
+2806 [QAAC]                 increased maximum bitrate to 1280. feature request #631
 2805 [Update]               added a first startup question if the updater should be enabled or disabled (message will be shown also once to existing users)
                             if disabled no downloads will be made without confirmation. therefore e.g. no information of new updates will be available.
 2804 [OneClick] + [FileIndexer] show playlist selection window for DVD/Blu-ray structures also if only one playlist is found
